# GLOOM-OX

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  Dockerfile  Dockerfile.alpine  Dockerfile.termux  LICENSE  LICENSE-3RD-PARTY.md  MANIFEST.in  README.md  docker-compose.prod.yml  docker-compose.yml  gloom-ox.py  gloom_ox.bat  init.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.cfg  setup.py  uninstall.ps1  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependabot.yml  nightly.yml  release.yml
assets/: banner.txt  robot_animation.txt
docs/: API.md  INSTALLATION.md
gloom_ox/: _init_.py  _main_.py
gloom_ox/config/: _init_.py  settings.py  user_agents.json
gloom_ox/core/: _init_.py  download_manager.py  social_engine.py  universal_engine.py  youtube_engine.py
gloom_ox/ui/: _init_.py  banner.py  progress.py  robot_assistant.py
gloom_ox/utils/: _init_.py  dependencies.py  headers.py  integrity.py  paths.py
scripts/: gloom_ox.sh  install.ps1  install.sh
tests/: _gallery.py  _init_.py  _platforms.py  test_downloader.py  test_engines.py  test_integrity.py
