[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gloom-ox"
version = "5.1.0"
description = "Universal Social Media Video Downloader with Gallery Injection - Works on Termux, Linux, Windows, macOS, Ubuntu"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "xspeen", email = "xspeen@proton.me"},
    {name = "GLOOM-OX Team", email = "support@gloom-ox.io"}
]
maintainers = [
    {name = "xspeen", email = "xspeen@proton.me"}
]
keywords = [
    "youtube-downloader",
    "instagram-downloader",
    "tiktok-downloader",
    "social-media-downloader",
    "video-downloader",
    "gallery-injector",
    "yt-dlp",
    "termux",
    "android-gallery",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Android",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
    "yt-dlp>=2024.12.13",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "certifi>=2023.0.0",
]

[project.urls]
Homepage = "https://github.com/xspeen/GLOOM-OX"
Repository = "https://github.com/xspeen/GLOOM-OX.git"
Documentation = "https://github.com/xspeen/GLOOM-OX/blob/main/README.md"
Issues = "https://github.com/xspeen/GLOOM-OX/issues"
Changelog = "https://github.com/xspeen/GLOOM-OX/releases"

[project.scripts]
gloom-ox = "gloom_ox.main:main"
gloom-ox-cli = "gloom_ox.cli:main"

[project.entry-points."console_scripts"]
gloom-ox = "gloom_ox.main:main"

[project.gui-scripts]
gloom-ox-gui = "gloom_ox.gui:main"

[tool.setuptools]
packages = ["gloom_ox", "gloom_ox.core", "gloom_ox.utils"]
include-package-data = true

[tool.setuptools.package-data]
gloom_ox = ["py.typed", "*.txt", "*.md", "assets/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    "*.egg-info",
]

[tool.ruff.isort]
known-first-party = ["gloom_ox"]
combine-as-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["gloom_ox"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bumpversion]
current_version = "5.1.0"
commit = true
tag = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "version = {current_version}"
replace = "version = {new_version}"

[tool.bumpversion.files]
filename = "gloom-ox.py"

[tool.bumpversion.files."pyproject.toml"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.bumpversion.files."setup.py"]
search = 'version="{current_version}"'
replace = 'version="{new_version}"'

[tool.poetry]  # Optional Poetry support
name = "gloom-ox"
version = "5.1.0"
description = "Universal Social Media Video Downloader with Gallery Injection"
authors = ["xspeen <xspeen@proton.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xspeen/GLOOM-OX"
repository = "https://github.com/xspeen/GLOOM-OX.git"
documentation = "https://github.com/xspeen/GLOOM-OX/blob/main/README.md"
keywords = ["downloader", "video", "social-media", "youtube", "instagram", "tiktok"]
include = ["CHANGELOG.md", "LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2024.12.13"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
certifi = "^2023.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.0"
bumpversion = "^0.6"
pre-commit = "^3.0"

[tool.poetry.scripts]
gloom-ox = "gloom_ox.main:main"

[tool.poetry.plugins."console_scripts"]
gloom-ox = "gloom_ox.main:main"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=61.0", "wheel"]
build-backend = "poetry.core.masonry.api"

# Docker specific configuration
[tool.docker]
image = "xspeen/gloom-ox"
tag = "latest"
file = "Dockerfile"
platforms = ["linux/amd64", "linux/arm64", "linux/arm/v7"]

# Pre-commit hooks configuration
[tool.pre-commit]
hooks = [
    {id = "black", name = "black", entry = "black", language = "python", types = ["python"]},
    {id = "ruff", name = "ruff", entry = "ruff", language = "python", types = ["python"]},
    {id = "mypy", name = "mypy", entry = "mypy", language = "python", types = ["python"]},
]

# GitHub Actions configuration
[tool.github-actions]
python-versions = ["3.8", "3.9", "3.10", "3.11", "3.12"]
platforms = ["ubuntu-latest", "windows-latest", "macos-latest"]

# VSCode settings
[tool.vscode]
python.defaultInterpreterPath = "python3"
python.linting.enabled = true
python.linting.blackEnabled = true
python.linting.ruffEnabled = true
python.formatting.provider = "black"
python.testing.pytestEnabled = true
