[metadata]
name = gloom-ox
version = 5.1.0
author = xspeen
author_email = xspeen@proton.me
description = Universal Social Media Video Downloader with Gallery Injection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xspeen/GLOOM-OX
project_urls =
    Bug Reports = https://github.com/xspeen/GLOOM-OX/issues
    Source = https://github.com/xspeen/GLOOM-OX
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    yt-dlp>=2024.12.13
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    certifi>=2023.0.0

[options.entry_points]
console_scripts =
    gloom-ox = gloom_ox.main:main

[options.packages.find]
where = .
exclude = tests, docs, assets

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203, W503
