[metadata]
name = gloom-ox
version = 5.1.0
author = xspeen
author_email = xspeen@proton.me
description = Universal Social Media Video Downloader with Gallery Injection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xspeen/GLOOM-OX
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Topic :: Multimedia :: Video
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    yt-dlp>=2024.12.13
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    certifi>=2023.0.0

[options.entry_points]
console_scripts =
    gloom-ox = gloom_ox.__main__:main
    gloomox = gloom_ox.__main__:main

[options.packages.find]
exclude = 
    tests*
    docs*
    assets*
    scripts*

[bdist_wheel]
universal = 1

[build_scripts]
executable = /usr/bin/env python3
