[metadata]
name = gloom-ox
version = 5.1.0
author = xspeen
author_email = xspeen@proton.me
description = Universal Social Media Video Downloader with Gallery Injection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xspeen/GLOOM-OX
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    yt-dlp>=2024.12.13
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    certifi>=2023.0.0

[options.packages.find]
exclude =
    tests*
    docs*
    assets*
    scripts*
    examples*
    notebooks*

[options.package_data]
gloom_ox =
    py.typed
    *.txt
    *.md
    assets/*.png
    assets/*.ico
    assets/*.svg
    data/*.json
    config/*.yaml

[options.entry_points]
console_scripts =
    gloom-ox = gloom_ox.__main__:main
    gloomox = gloom_ox.__main__:main

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0

[check-manifest]
ignore =
    .github/workflows/*.bak
    *.log
    *.tmp
    __pycache__
    .pytest_cache
    .coverage
    htmlcov
    dist
    build
    *.egg-info
